--- a/src/body.css
+++ b/src/body.css
@@ -3,3 +3,8 @@
     padding-left: 4.4rem;
     padding-right: 2rem; 
 }
+
+.gridTamplate{
+    display: grid;
+    grid-template-columns: 0.8fr 1.2fr 1fr;
+}
